--- a/food-server/package.json
+++ b/food-server/package.json
@@ -11,12 +11,24 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.6.7",
+		"bcrypt": "^5.1.1",
 		"colors": "^1.4.0",
 		"cors": "^2.8.5",
-		"dotenv": "^16.3.1",
-		"express": "^4.18.2"
+		"dotenv": "^16.4.1",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.1.0",
+		"node": "^21.6.0",
+		"nodemailer": "^6.9.8",
+		"nodemon": "^3.0.3",
+		"ts-node": "^10.9.2"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.5",
+		"@types/nodemailer": "^6.4.14",
 		"typescript": "^5.3.3"
 	}
 }
