--- a/food-client/package.json
+++ b/food-client/package.json
@@ -17,11 +17,17 @@
 		"@mui/material": "^5.15.4",
 		"@mui/material-nextjs": "^5.15.3",
 		"@mui/styled-engine-sc": "^6.0.0-alpha.12",
+		"axios": "^1.6.7",
+		"formik": "^2.4.5",
 		"next": "14.0.4",
 		"node": "^21.2.0",
 		"react": "^18",
 		"react-dom": "^18",
-		"styled-components": "^6.1.8"
+		"react-toastify": "^10.0.4",
+		"styled-components": "^6.1.8",
+		"sweetalert2": "^11.10.4",
+		"toastify": "^2.0.1",
+		"yup": "^1.3.3"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
