--- a/food-server/package.json
+++ b/food-server/package.json
@@ -19,6 +19,7 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.1.0",
+		"nanoid": "^5.0.4",
 		"node": "^21.6.0",
 		"nodemailer": "^6.9.8",
 		"nodemon": "^3.0.3",
@@ -26,6 +27,7 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/nodemailer": "^6.4.14",
