--- a/food-client/package.json
+++ b/food-client/package.json
@@ -20,11 +20,12 @@
 		"axios": "^1.6.7",
 		"formik": "^2.4.5",
 		"merge": "^2.1.1",
-		"next": "14.0.4",
+		"next": "^14.1.1-canary.61",
 		"node": "^21.2.0",
 		"react": "^18",
 		"react-apexcharts": "^1.4.1",
 		"react-dom": "^18",
+		"react-icons": "^5.0.1",
 		"react-toastify": "^10.0.4",
 		"styled-components": "^6.1.8",
 		"sweetalert2": "^11.10.4",
